send mail function
functional

--- a/index-5.html
+++ b/index-5.html
@@ -49,8 +49,8 @@
 										<img src="images/title5_1.gif" alt="" style="margin-left:29px"><br>
 										<br style="line-height:9px">
 										<img src="images/pic5_3.gif" alt="" align="left" style="margin-left:30px; margin-top:2px; margin-right:14px">
-										<strong>The Company Name Inc.</strong><br>
-										9863 - 9867 Mill Road, Cambridge, MG09 99HT <br>
+										<strong>{company name here}</strong><br>
+										{company address here}<br>
 										<br style="line-height:12px">
 										Freephone:&nbsp;&nbsp;+44 800 559 6580<br>
 										Telephone:&nbsp;&nbsp;+44 959 603 6035<br>
@@ -61,31 +61,31 @@
 										<img src="images/title5_2.gif" alt="" style="margin-left:28px"><br>
 										<div style="margin-left:30px">
 											<br style="line-height:12px">
-											Praesent vestibu lum molestie lacus. Aenean nonummy hendrerit mauris.<br>
+											{Leave us a mesage if you are interested in us}<br>
 											<br style="line-height:9px">
-											<form action="" enctype="multipart/form-data" id="form">
+											<form action="sendmail.php" method="post" enctype="multipart/form-data" id="form">
 											<table  cellspacing="0" cellpadding="0" class="form">
 											  <tr>
 												<td  style="width:198px; height:128px">
 													<table  cellspacing="0" cellpadding="0">
 													  <tr>
-														<td  style="width:198px; height:27px"><input name="" type="text" value="your name:"></td>
+														<td  style="width:198px; height:27px"><input name="name" type="text" placeholder="your name:"></td>
 													  </tr>
 													   <tr>
-														<td  style="width:198px; height:27px"><input name="" type="text" value="your company:"></td>
+														<td  style="width:198px; height:27px"><input name="company" type="text" placeholder="your company:"></td>
 													  </tr>
 													   <tr>
-														<td  style="width:198px; height:27px"><input name="" type="text" value="telephone:"></td>
+														<td  style="width:198px; height:27px"><input name="telephone" type="text" placeholder="telephone:"></td>
 													  </tr>
 													   <tr>
-														<td  style="width:198px; height:27px"><input name="" type="text" value="e-mail"></td>
+														<td  style="width:198px; height:27px"><input name="email" type="text" placeholder="e-mail"></td>
 													  </tr>
 													</table>
 												</td>
 												<td  style="width:202px; height:128px">
 													<table  cellspacing="0" cellpadding="0">
 													  <tr>
-														<td  style="width:202px; height:109px"><textarea name="" cols="0" rows="0">message:</textarea></td>
+														<td  style="width:202px; height:109px"><textarea name="content" cols="0" rows="0" placeholder="message:"></textarea></td>
 													  </tr>
 													  <tr>
 														<td  style="width:202px; height:19px">
@@ -102,32 +102,6 @@
 										<img src="images/px2_1.gif" alt="" style="margin-left:29px"><br>
 										<br style="line-height:24px">
 										<img src="images/title5_3.gif" alt="" style="margin-left:28px"><br>
-										<div style="margin-left:30px">
-											<br style="line-height:11px">
-											<table  cellspacing="0" cellpadding="0">
-											  <tr>
-												<td  style="width:214px; height:96px">
-													<strong>Customer Service:</strong><br>
-													Telephone:&nbsp;+44 959 603 6035<br>
-													E-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="#">customer@company.com</a></span><br>
-													<br style="line-height:12px">
-													 <strong>Support Department:</strong><br>
-													Telephone:&nbsp;+44 959 603 6035<br>
-													E-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="#">support@company.com</a></span><br>												
-												</td>
-												<td  style="width:190px; height:96px">
-													<strong>Network Planning Service:</strong><br>
-													Telephone:&nbsp;+44 959 603 6035<br>
-													E-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="#">network@company.com</a></span><br>
-													<br style="line-height:12px">
-													 <strong>Technical Department:</strong><br>
-													Telephone:&nbsp;+44 959 603 6035<br>
-													E-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="#">tech@company.com</a></span><br>	
-												</td>
-											  </tr>
-											</table>
-										</div>
-									
 									</td>
 								  </tr>
 								</table>
